# pytelex

./: .gitignore  pyproject.toml  readme.md
pytelex/: __init__.py  client.py  conditions.py  dispatcher.py  errors.py  request.py
pytelex/enums/: __init__.py  chat_type.py  parse_mode.py
pytelex/handlers/: message.py
pytelex/methods/: base.py  client.py
pytelex/methods/admin/: base.py
pytelex/methods/bot/: _getme.py  base.py
pytelex/methods/chat/: _approvechatjoinrequest.py  _banchatmember.py  _bansenderchat.py  _createchatinvitelink.py  _declinechatjoinrequest.py  _exportchatinvitelink.py  _getchat.py  _pinchatmessage.py  _promotechatmember.py  _restrictchatmember.py  _revokechatinvitelink.py  _setchatadministratorcustomtitle.py  _unbanchatmember.py  _unbansenderchat.py  _unpinallchatmessages.py  _unpinchatmessage.py  base.py
pytelex/methods/file/: _download.py  _getfile.py  base.py
pytelex/methods/media/: _editmessagecaption.py  _sendmedia.py  base.py
pytelex/methods/message/: _copymessage.py  _deletemessage.py  _editmessagetext.py  _forwardmessage.py  _sendmessage.py  base.py
pytelex/methods/user/: base.py
pytelex/types/: __init__.py  chat.py  file.py  inline_keyboard_button.py  inline_keyboard_markup.py  input_file.py  keyboard_button.py  message.py  message_id.py  object.py  photo_size.py  reply_keyboard_markup.py  user.py
